# framework-F4-Conversion

./: .gitignore  BUILD.md  CMakeLists.txt  CMakePresets.json  README.md  TestCompile.bat  URL_WHITELIST_GUIDE.md  _b.bat  _build14.bat  _configure_and_build.bat  build-and-deploy.bat  build.bat  build_and_deploy.bat  build_out.txt  build_release.bat  changelog.md  deploy.bat  gitlog.md  setup-sdk.ps1  setup.bat  vcpkg-configuration.json  vcpkg.json  verify-deploy.bat  xmake.lua
cmake/: CompilerFlags.cmake  ExternalDependencies.cmake  commonlibf4.cmake  ultralight.cmake
docs/: CHANGELOG.md  api-reference.md  examples.md  getting-started.md  html-views.md  limitations.md  modern-frameworks.md  papyrus-bridge.md  prismamcm.md  translations.md  view-lifecycle.md
docs/superpowers/plans/: 2026-05-30-debug-panel.md  2026-05-31-papyrus-bridge.md
docs/superpowers/specs/: 2026-05-30-debug-panel-design.md  2026-05-31-papyrus-bridge-design.md
example-f4se-plugin/: ISSUE.md  README.md  build-and-deploy.bat  build.bat  deploy.bat  verify-deploy.bat  xmake.lua
example-f4se-plugin/.xmake/windows/x64/: xmake.conf
example-f4se-plugin/.xmake/windows/x64/cache/: config  detect  history  package  references  toolchain
example-f4se-plugin/src/: PCH.h  PrismaUI_F4_API.h  PrismaUI_F4_Helper.h  main.cpp
example-f4se-plugin/src/keyhandler/: keyhandler.cpp
example-f4se-plugin/view/: index.html  script.js  style.css
res/: commonlibf4-plugin.cpp.in
scripts/: commonlibf4-plugin.cpp.in
src/: PCH.h  PrismaUI_F4_API.h  main.cpp
src/API/: API.cpp  API.h
src/Hooks/: Hooks.cpp  Hooks.h
src/Menus/FocusMenu/: FocusMenu.cpp  FocusMenu.h
src/PrismaUI/: Communication.cpp  Communication.h  Core.cpp  Core.h  ImeHelper.cpp  InputHandler.cpp  InputHandler.h  Inspector.cpp  Inspector.h  Listeners.cpp  Listeners.h  NetworkSandbox.h  NotificationSystem.cpp  NotificationSystem.h  PapyrusBridge.cpp  PapyrusBridge.h  Translations.cpp  Translations.h  URLWhitelist.h  ViewManager.cpp  ViewManager.h  ViewOperationQueue.cpp  ViewOperationQueue.h  ViewRenderer.cpp  ViewRenderer.h
src/Utils/: ConflictChecker.cpp  ConflictChecker.h  DllLoader.h  Encoding.h  NanoID.h  SingleThreadExecutor.h
src/Utils/WinKeyHandler/: WinKeyHandler.cpp  WinKeyHandler.h
